# defi-risk-monitor

./: .env  .gitignore  .gitmodules  ADVANCED_DASHBOARD_PLAN.md  AI_IMPLEMENTATION_ROADMAP.md  API_DOCUMENTATION.md  BUISNESSPLAN.md  COMPLETION_ROADMAP.md  COMPREHENSIVE_TESTING_GUIDE.md  Cargo.toml  FLETCHERPLAN  FLETCHERREVIEW  MODULAR_RISK_ARCHITECTURE_MIGRATION_PLAN.md  PLAN.md  PRODUCTION_OPTIMIZATION_PLAN.md  PRODUCTION_ROADMAP.md  README.md  REAL_TIME_DASHBOARD_PLAN.md  RISK_MONITOR_INTEGRATION_PLAN.md  USAGE_GUIDE.md  UX_CONVERSION_MASTER_PLAN.md  de.fi  demo_risk_calculation.py  run_comprehensive_tests.sh  smartdetectionplan  test_results.txt  test_security_modules.rs  verify_security.rs
backend/: .env  .env.development  .env.example  .env.template  .env.test  API_DOCUMENTATION.md  COMPREHENSIVE_API_DOCUMENTATION.md  Cargo.toml  ENHANCED_LOGGING_MONITORING_GUIDE.md  PRODUCTION_CONFIGURATION_GUIDE.md  README.md  docker-compose.yml  standalone_blockchain_test.rs
backend/.sqlx/: query-0514fd74ab63b7b3cb0257d0391b7b45f8ef7baf1469132489a54bd6ea814f9a.json  query-1548278f8ec88fe2aedfdbc9024b26984c9747dd21be9022fdb3bff16d10a2a4.json  query-18eb23982fb8b6857c2b4fb5fabab2fac283c8ee3aca1f8646c8f4d24422b22b.json  query-1ea4ef82d1192f23be2b4a54af655f3c16e211a0971aa2e1bbe4007856bbb103.json  query-29c8bbb6b99b6a611c0a80fa7b568cb29bebd3ac23f40db1ebc71f2d5406dc84.json  query-2a1cc5a40c879152e9440b4ccfb3690bd872c1549cf661bfc104005422b77cdb.json  query-2c87d24e020624cb992392e9a56a2bead002fd86e7fc66f2d7eaca260e58a6e3.json  query-3f1f4e44f5125741bee1cb7fb996ab7b56ebf56aa7fbc1f7e6dceee2dd7148d7.json  query-420778672fcf83cb1144907dc922db6cbaff0f3ed2454a6ad579ca9885fc47e1.json  query-4463cf5b1820f20ac4294fd3b45b1a9bc4b4e4042537a50fcbd588f6042d6043.json  query-4b5e222e2aeff6885211c8866ce78141f2882660d72db7b0756d65daf55df87f.json  query-4b9b3b6f4a288ff191fb8e1fa70cbf2c1309b70ae2a6ec3aa154135d595d2a72.json  query-550708025f84d468e6c6e5815c87f1c259fef3643b91bc2dbfd4135331641400.json  query-591abeb6b8654efb70b15202655b9e20331ca4831d829e7f6fa784a62347fa7c.json  query-5aaadb97aa5b0e5c3128da078e89a79803f5ebf84d9dd46071bf2861eaedcae1.json  query-5da8e1c9f7be9f141fda6ce4df79e56c14c19113bcdea154b7d3772b6ac69529.json  query-6a3bdddceebec73f6af9f61846281f621bb5ae79ccba6aa9641cdf71af7d9cdf.json  query-71f488376b2424acaba9381e6dc275c8977d02d7d61ff5ce3ab92cadcb739a31.json  query-76088c48eacf8d5afe6b0886107a825cdeca9435c3501ec42e5e868d5ad484ce.json  query-79410a0f5224a21d7589912aba970f382bc16cb0ecefb47366098898e3dbfc73.json  query-8aa8b40f6aa2b43751161086ab75f94af84ab0ed9cacc07092224f1f1054cfeb.json  query-97466113215cb3d84d00d6db4457102ee32c5ae6581c201150cbdf73eadac8e3.json  query-9bebfa71df075c22dee69231d9a6c5ed4666b9a3bcf045aa20a764564a0c133e.json  query-a24b3b247eb26af902ffa81f1c2a5f44f28e099140b99bb1912a4e7a42d7ed32.json  query-a24f68c7348db9136eb0a9ce35d73eda4fc0d92e350640c72a6c57dbc715e1e2.json  query-a795f5279cb21bd50a3e5683b614b5f73423eec9533f711395032404eee8f901.json  query-b4f6b17000210e0f95fb8e798ec9edc5bf81da8fcfd54eb15d86ef6216d364c4.json  query-b5247090ddf887495359b84d600a2dc9cc0009f0cd53ebc89c4961802c2aa8ea.json  query-bfc803b143c535bdd6eda3930770b47cea682eabc0029795d7d763f3be7347a6.json  query-c92b70c974a8c3ce90ab6924b8998055d0b06b65023d5dd9a613449ce3096af8.json  query-ca2124c1bd2aa384ebb560f2c9a9f333604661e2eae9d5d2592150140a62cb64.json  query-cf7ce6c57427b1028c79d8fd52aaeefaabba002369222de58ca8bfbc5041604b.json  query-d15e4c4a981249d5db8ff641ba98ab4418fa472b1494fa20ef50ae4a0d03338a.json  query-d6a11679cb253d8c5ccf8aa71f7fd259e7cee853ba024c483e93df9b04f8c584.json  query-dc386cbab76a87a79ccbfcef422d896145739d6a15f1c70cc4d3bfff7aef4742.json  query-e0060c427e61d7f49ec1181d1030f1f160075d47ccba1c4a2eaf8d13e6305e4a.json  query-e7c1ae4bda7a1498dae9cc1eff90ff500067913aee429fe59ca7fe03e057bb9a.json  query-eae5db168c37d2ae3d646cba3cf82bf3f5b234717b5cce376172747150df9e76.json  query-f00c0686c1bf3904895cc24a9a69d6b23bbc717bd92a5e3fec68e93db38fc10f.json  query-f32c35c1f2a59761594a65d6e118158b27df70e9cfeb1ca1c51a00facd84b09b.json  (+2 more)
backend/abi/: UniswapV3Pool.json
backend/config/: config.development.toml  config.production.toml  config.staging.toml  config.testing.toml
backend/docs/: ADVANCED_CONNECTION_POOLING.md
backend/migrations/: 002_audit_schema.sql  003_users_schema.sql  20240101000009_create_mev_risk_tables.sql  20250725233000_create_price_history.sql  20250726000003_create_alerts_table.sql  20250726000005_create_protocol_events.sql  20250731000001_create_cross_chain_risk_tables.sql  20250731000002_add_liquidity_depth_to_chain_risks.sql  20250731000003_optimize_database_performance.sql  20250801000001_user_management_tables.sql  20250801000004_create_risk_assessment_tables.sql  20250801000005_add_missing_indexes.sql  20250801000006_create_query_performance_tables.sql  20250801000007_advanced_connection_pool_monitoring.sql
backend/scripts/: setup_db.sh  test_data_generator.py
backend/src/: comprehensive_test_demo.rs  health.rs  lib.rs  main.rs  main_production.rs
backend/src/adapters/: aave_v3.rs  aave_v3_old.rs  balancer_v2.rs  beefy.rs  compound_v3.rs  compound_v3_backup.rs  convexfinance.rs  curve.rs  eigenlayer.rs  etherfi.rs  lido.rs  makerdao.rs  mod.rs  morphoblue.rs  rocketpool.rs  traits.rs  uniswap_v2.rs  uniswap_v3.rs  yearnfinance.rs
backend/src/auth/: claims.rs  jwt.rs  middleware.rs  mod.rs  tests.rs
backend/src/blockchain/: ethereum_client.rs  mod.rs
backend/src/config/: disaster_recovery.rs  manager.rs  mod.rs  production.rs  settings.rs  validator.rs
backend/src/database/: advanced_pool.rs  connection.rs  connection_pool_service.rs  materialized_views.rs  mod.rs  operations.rs  pool.rs  query_performance.rs  query_service.rs  retry_wrapper.rs  safety_service.rs  transaction_retry.rs
backend/src/error/: classification.rs  constraint_handler.rs  mod.rs  retry.rs  (+1 more)
backend/test_blockchain/: Cargo.toml
backend/tests/: comprehensive_test.rs  integration_test.rs  jwt_auth_integration_test.rs  jwt_simple_test.rs  property_based_tests.rs  websocket_real_time_test.rs
(+281 files in other folders)
