[package]
name = "defi-risk-monitor"
version = "0.1.0"
edition = "2021"
authors = ["DeFi Risk Monitor Team"]
description = "A comprehensive DeFi risk monitoring system"
license = "MIT"
repository = "https://github.com/your-org/defi-risk-monitor"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Blockchain Integration
alloy = { version = "0.3", features = ["full", "provider-http", "provider-ws", "rpc-types", "contract", "sol-types"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "bigdecimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
url = "2.5"
num-traits = "0.2.19"

# HTTP Client for alerts
reqwest = { version = "0.11", features = ["json"] }

# Math & Utilities
rust_decimal = { version = "1.35", features = ["serde-float", "maths"] }
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"
tempfile = "3.0"

# Benchmarking
[[bench]]
name = "risk_calculation"
harness = false

[features]
default = []
