[package]
name = "defi-risk-monitor"
version = "0.1.0"
edition = "2021"
authors = ["DeFi Risk Monitor Team"]
description = "A comprehensive DeFi risk monitoring system"
license = "MIT"
repository = "https://github.com/your-org/defi-risk-monitor"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.21"

# Blockchain Integration
alloy = { version = "0.3", features = ["full", "provider-http", "provider-ws", "rpc-types", "contract", "sol-types"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "bigdecimal", "ipnetwork"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP Client for API calls
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.4"

# Configuration
config = "0.14"
dotenvy = "0.15"
toml = "0.8"
notify = "6.1"

# Fault Tolerance
tokio-retry = "0.3"
failsafe = "1.2"
backoff = "0.4"

# Monitoring and Metrics
prometheus = "0.13"
metrics = "0.21"
metrics-prometheus = "0.6"

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
moka = { version = "0.12", features = ["future"] }

# Authentication and Security
jsonwebtoken = "9.2"
sha2 = "0.10"
regex = "1.10"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

num-traits = "0.2.19"

# HTTP Client for alerts (using existing reqwest above)

# Math & Utilities
rust_decimal = { version = "1.35", features = ["serde-float", "maths"] }
bigdecimal = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
wiremock = "0.6"
tempfile = "3.0"

# Property-based and Fuzz Testing
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }

# Benchmarking
[[bench]]
name = "risk_calculation"
harness = false

[features]
default = []
